--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,37 +4,9 @@
   become: true
   tasks:
 
-  - name: update repository index
-    apt:
+  - name: install apache and php packages
+    package:
+      name:
+        - "{{ apache_package }}"
+        - "{{ php_package }}"
       update_cache: yes
-    when: ansible_distribution == "Ubuntu"
-
-  - name: install apache2 package
-    apt:
-      name: apache2
-    when: ansible_distribution == "Ubuntu"
-
-  - name: add php support for apache
-    apt:
-      name: libapache2-mod-php
-    when: ansible_distribution == "Ubuntu"
-
-  - name: install bashtop
-    apt:
-       name: bashtop
-    when: ansible_distribution == "Ubuntu"
-
-  - name: install httpd package
-    dnf:
-      name: httpd
-    when: ansible_distribution == "Fedora"
-
-  - name: add php support for apache
-    dnf:
-      name: php
-    when: ansible_distribution == "Fedora"
-
-  - name: install bashtop
-    dnf:
-       name: bashtop
-    when: ansible_distribution == "Fedora"
