changed the value of become to true

--- a/apache-timezone.yml
+++ b/apache-timezone.yml
@@ -1,12 +1,12 @@
 ---
 - name: Set up Apache Server
   hosts: michael@192.168.65.2
-  become: yes
+  become: true
 
   tasks:
     - name: update repository index for Ubuntu
       apt:
-        update_cache: yes
+        update_cache: true
       when: ansible_distribution_version == "Ubuntu"
 
     - name: Installing Apache
@@ -33,7 +33,7 @@
       service:
         name: apache2
         state: started
-        enabled: yes
+        enabled: true
 
     - name: Restart Apache
       service:
