--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,23 +1,20 @@
 ---
-
-- hosts: all
+- name: Installing Apache
+  hosts: all
   become: true
   tasks:
+    - name: Install apache and php for Ubuntu servers
+      apt:
+        name:
+          - apache2
+          - libapache2-mod-php
+        update_cache: true
+      when: ansible_distribution == "Ubuntu"
 
-  - name: install apache and php for Ubuntu servers
-    apt:
-      name:
-        - apache2
-        -libapache2-mod-php
-      state: latest
-      update_cache: yes
-    when: ansible_distribution == "Ubuntu"
-
-  - name: install httpd and php for Fedora servers
-    dnf:
-      name:
-        - httpd
-        - php
-      state: latest
-      update_cache: yes
-    when: ansible_distribution == "Fedora"
+    - name: Install httpd and php for Fedora servers
+      dnf:
+        name:
+          - httpd
+          - php
+        update_cache: true
+      when: ansible_distribution == "Fedora"
