--- a/site.yml
+++ b/site.yml
@@ -1,58 +1,58 @@
 ---
-- hosts: all
+
+- name: Maintaining the nodes
+  hosts: all
   become: true
   tasks:
-    - name: install package updates (Fedora)
+
+    - name: Install package updates (Fedora)
       dnf:
-        update_only: yes
-        update_cache: yes
+        update_only: true
+        update_cache: true
       when: ansible_distribution == "Fedora"
 
-    - name: install package updates (Ubuntu)
+    - name: Install package updates (Ubuntu)
       apt:
-        upgrade: dist
-        update_cache: yes
+        update_cache: true
       when: ansible_distribution == "Ubuntu"
 
-- hosts: web_servers
+- name: Web_servers
+  hosts: web_servers
   become: true
-  pre_tasks:
-    - name: install apache and php for Ubuntu servers
+  tasks:
+    - name: Install apache and php for Ubuntu servers
       apt:
         name:
           - apache2
           - libapache2-mod-php
-        state: latest
       when: ansible_distribution == "Ubuntu"
 
-    - name: install httpd and php for Fedora servers
+    - name: Install httpd and php for Fedora servers
       dnf:
         name:
           - httpd
           - php
-        state: latest
-        update_cache: yes
+        update_cache: true
       when: ansible_distribution == "Fedora"
 
-- hosts: db_servers
+- name: Db_servers
+  hosts: db_servers
   become: true
   tasks:
-    - name: install mariadb package (Fedora)
+    - name: Install mariadb package (Fedora)
       dnf:
         name: mariadb
-        state: latest
       when: ansible_distribution == "Fedora"
 
-    - name: install mariadb package (Ubuntu)
+    - name: Install mariadb package (Ubuntu)
       apt:
         name: mariadb-server
-        state: latest
       when: ansible_distribution == "Ubuntu"
 
-- hosts: file_servers
+- name: File_servers
+  hosts: file_servers
   become: true
   tasks:
-    - name: install samba package
+    - name: Install samba package
       package:
         name: samba
-        state: latest
