--- a/apache-timezone.yml
+++ b/apache-timezone.yml
@@ -2,15 +2,14 @@
 - name: Set up Apache Server
   hosts: michael@192.168.65.2
   become: true
-
   tasks:
-    - name: update repository index for Ubuntu
-      apt:
+    - name: Update repository index for Ubuntu
+      ansible.builtin.apt:
         update_cache: true
       when: ansible_distribution_version == "Ubuntu"
 
     - name: Installing Apache
-      apt:
+      ansible.builtin.apt:
         name: apache2
       notify:
         - Start Apache
@@ -20,22 +19,25 @@
         name: Africa/Lagos
 
     - name: Create index.php file
-      copy:
+      ansible.builtin.copy:
         content: |
           <?php
           echo date("F d, Y h:i:s A e", time());
         dest: /var/www/html/index.php
+        owner: michael
+        group: adm
+        mode: "0644"
       notify:
         - Restart Apache
 
   handlers:
     - name: Start Apache
-      service:
+      ansible.builtin.service:
         name: apache2
         state: started
         enabled: true
 
     - name: Restart Apache
-      service:
+      ansible.builtin.service:
         name: apache2
         state: restarted
