--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,7 +4,7 @@
   become: true
   tasks:
     - name: Install apache and php for Ubuntu servers
-      apt:
+      ansible.builtin.apt:
         name:
           - apache2
           - libapache2-mod-php
@@ -12,7 +12,7 @@
       when: ansible_distribution == "Ubuntu"
 
     - name: Install httpd and php for Fedora servers
-      dnf:
+      ansible.builtin.dnf:
         name:
           - httpd
           - php
