--- a/site.yml
+++ b/site.yml
@@ -1,4 +1,5 @@
 ---
+
 - name: Maintaining the nodes
   hosts: all
   become: true
@@ -15,6 +16,25 @@
       apt:
         update_cache: true
       when: ansible_distribution == "Ubuntu"
+
+- name: Adding Terraform to Workstation
+  hosts: workstation
+  become: true
+  tasks:
+
+  - name: install unzip
+    package:
+      name: unzip
+
+  - name: install terraform
+    unarchive:
+      src: https://releases.hashicorp.com/terraform/1.6.3/terraform_1.6.3_darwin_amd64.zip
+      dest: /usr/local/bin
+      remote_src: yes
+      mode: "0755"
+      owner: root
+      group: root
+
 
 - name: Web_servers
   hosts: web_servers
